Improve building DicomSpecialElement